# BeSpoked-Bikes-Sales

./: LICENSE  Procfile  README.md  pyproject.toml  startup.sh
bespoked_bikes_sales/: __init__.py  db_setup.py  forms.py  models.py  routes.py
bespoked_bikes_sales/templates/: _formhelpers.jinja  base.jinja  create_sale.jinja  customers.jinja  filter_sales.jinja  index.jinja  navbar.jinja  products.jinja  sales.jinja  sales_report.jinja  salespeople.jinja  update_product.jinja  update_salesperson.jinja
instance/: sales.db
